WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15305
Crash when dragging an image when "load images automatically" preference is off
https://bugs.webkit.org/show_bug.cgi?id=15305
Summary
Crash when dragging an image when "load images automatically" preference is off
808caaa4.8ce9.9cd6c799e9f6
Reported
2007-09-28 08:36:43 PDT
Anonymous reporter(2ch.net, ID:tLTFSr9l0) said Safari/WebKit seems crash when users begin drag at image-with-anchor objects. With ntsd, it's inside WebCore::writeImageToDataObject().
Attachments
Proposed fix with ChangeLog
(2.71 KB, patch)
2007-10-07 17:08 PDT
,
Adam Roben (:aroben)
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2007-10-05 03:53:00 PDT
I do not think this is enough information to work on this bug. Is there an example URL where this crash can be seen?
808caaa4.8ce9.9cd6c799e9f6
Comment 2
2007-10-05 06:24:34 PDT
Thank you so much for pointing out, and sorry for inaccuracy. Summary fixed slightly. Please rename properly if validated. 1. Open www.apple.com, new iPod nanos shown up today. 2. Drag over it, nothing wrong(OK). 3. disable Edit->Preferences->Appearance->"Display images when the page opens." 4. Reload www.apple.com, assume no pictures remains, includes iPod nanos. 5. Drag over the same area. 6. Crash may appear with my environment.
Alexey Proskuryakov
Comment 3
2007-10-05 07:08:53 PDT
Thank you for the additional information! I could reproduce this with
r24749
nightly (haven't downloaded anything newer on Windows).
David Kilzer (:ddkilzer)
Comment 4
2007-10-05 09:03:19 PDT
<
rdar://problem/5524774
>
Adam Roben (:aroben)
Comment 5
2007-10-07 17:08:02 PDT
Created
attachment 16581
[details]
Proposed fix with ChangeLog
Eric Seidel (no email)
Comment 6
2007-10-07 17:12:36 PDT
Comment on
attachment 16581
[details]
Proposed fix with ChangeLog Looks good.
Adam Roben (:aroben)
Comment 7
2007-10-07 17:23:26 PDT
Landed as
r26102
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug